# vietnamlands

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/data/: vietnamlands_new.json  vietnamlands_old.json
src/filter/: __init__.py
